--- a/karp_communication/karp_communication/doctype/erp_client_settings/erp_client_settings.json
+++ b/karp_communication/karp_communication/doctype/erp_client_settings/erp_client_settings.json
@@ -9,7 +9,8 @@
   "chrome_driver_path",
   "wa_web_url",
   "store",
-  "wa_automation_mode"
+  "wa_automation_mode",
+  "store_to_chrome_profile_loc"
  ],
  "fields": [
   {
@@ -39,12 +40,19 @@
    "fieldtype": "Select",
    "label": "WA Automation Mode",
    "options": "GUI\nHeadless"
+  },
+  {
+   "fieldname": "store_to_chrome_profile_loc",
+   "fieldtype": "Code",
+   "in_list_view": 1,
+   "label": "Store To Chrome Profile Loc ",
+   "reqd": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2024-09-23 10:29:16.622927",
+ "modified": "2024-10-17 10:04:29.056612",
  "modified_by": "Administrator",
  "module": "Karp Communication",
  "name": "ERP Client Settings",
